# P_CPP

CPP_Practice/Project1/: Project1.sln
DP_Exp/: Templatemethod.cpp  bridge.cpp
P_Best_Practices/: Best Practice_Style.md
P_C++_17/P_CPP_17/: P_CPP_17.sln
P_C++_20/P_CPP_20/: P_CPP_20.sln
P_C++_Basics/Casting/: static_cast_ex_01.cpp
P_C++_Basics/Pointer/: shared_pointer_01.cpp  smart_pointer.cpp  weak_pointer.cpp
P_DLL/P_CPP_DLL/: P_CPP_DLL.sln
P_DP/P_CPP_DP/: P_CPP_DP.sln
P_DP/SOLID_SRP/: SOLID_SRP.md  SOLID_SRP.sln
P_Data_Structure/P_CPP_DS/: P_CPP_DS.sln
P_STL/P_CPP_STL/: P_CPP_STL.sln
P_VC/P_Modern_Cpp_Absolute/: P_Modern_Cpp_Absolute.sln
P_gmock/P_CPP_Gmock/: P_CPP_Gmock.sln
P_gtest/P_CPP_Gtest/: P_CPP_Gtest.sln
refe/: CPP_notes.md  Const_Cast_01.cpp  Dynamic_Cast_01.cpp  RTTI_CPP.md  Reference_Link.md  ReinterpretCast.cpp  explicit_cast.cpp
refe/C++20/: C++ Likely and Unlikely attributes.docx  How to Implement Coroutines in C.docx
refe/CPP20_Practice/: CPP20_Practice.sln
refe/DesignPattern/: Abstract Factory Design Pattern.docx  AdapterDesignPattern.docx  ChainofResponsibilityDesignPattern.docx  Command Design Pattern.docx  Decorator Design Pattern.docx  DesignPattern.md  FactoryMethodDesignPattern.docx  Iterator Design Pattern.docx  Observer Design Pattern.docx  Proxy Design Pattern.docx  Singleton Design Pattern.docx  Singleton_DP.cpp  Template Method Design Pattern.docx  ~$erator Design Pattern.docx
refe/Exception/: Exception.md
refe/Note/: Note.md
refe/Refence/SOLID/test/: CMakeLists.txt  main.test.cpp
(+1258 files in other folders)
